Revised styles, fixed dark mode, and small cleanup

--- a/docs/components/pages/landing/styles.css
+++ b/docs/components/pages/landing/styles.css
@@ -1,3 +1,20 @@
+.dark footer,
+.dark body {
+    background-color: black !important;
+}
+
+.dark .light-theme-element, .dark-theme-element {
+    display: none;
+}
+
+.dark .dark-theme-element, .light-theme-element {
+    display: unset;
+}
+
+.dark .nextra-nav-container .nextra-nav-container-blur  {
+    background-color: rgba(0,0,0,.5) !important;
+}
+
 .nextra-nav-container {
     z-index: 30;
 }
@@ -12,5 +29,5 @@
     aspect-ratio: 16/9;
     display: block;
     position: absolute;
-    background: linear-gradient(transparent 75%, var(--bg-color));
+    background: linear-gradient(transparent 50%, var(--bg-color));
 }
